<?xml version="1.0" ?>
<package>
  <name>scanmatcher</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pymrpt</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>pymrpt</run_depend>
</package>
